tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetStaticParameters_Exception.bsl

EVIL_PROVIDER_GetStaticParameters_Exception.fsx(7,18,7,84): typecheck error FS3033: The type provider 'Provider.EvilProviderWhereGetStaticParametersRaisesException' reported an error: deliberate error for testing purposes

EVIL_PROVIDER_GetStaticParameters_Exception.fsx(7,18,7,84): typecheck error FS3033: The type provider 'Provider.EvilProviderWhereGetStaticParametersRaisesException' reported an error: deliberate error for testing purposes
